--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bracket-lib = "~0.8.1"
+bracket-lib = "~0.8.7"
 env_logger = "~0.9.1"
 log = "~0.4.17"
+legion = "~0.4.0"
