--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
 name = "dungeoncrawl"
-version = "0.1.0"
+version = "0.1.1"
+description = "Following along with Herbert Wolverson's 'Hands-on Rust'"
+authors = ["Duane Sibilly <duane@sibilly.com>"]
+repository = "https://github.com/dsibilly/dungeoncrawl"
+keywords = ["ecs", "game"]
+readme = "README.md"
+license = "MIT"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
