--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,10 @@ bracket-lib = "~0.8.7"
 env_logger = "~0.9.1"
 log = "~0.4.17"
 legion = "~0.4.0"
+
+[profile.dev]
+opt-level = 0
+
+[profile.release]
+lto = true
+opt-level = "z"
