--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,6 @@ legion = "~0.4.0"
 [profile.dev]
 opt-level = 0
 
-[profile.release]
-lto = true
-opt-level = "z"
+# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
+[profile.dev.package."*"]
+opt-level = 3
